--- a/C# OOP/Exercise - Defining Classes/02.CreatingConstructors/02.CreatingConstructors.csproj
+++ b/C# OOP/Exercise - Defining Classes/02.CreatingConstructors/02.CreatingConstructors.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EB3F6EC-DB33-4ABF-BBC8-1640F3214ADA}</ProjectGuid>
+    <ProjectGuid>{44753B1F-8AA6-4871-94F6-94DAE027FD13}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.DefiningClasses</RootNamespace>
-    <AssemblyName>01.DefiningClasses</AssemblyName>
+    <RootNamespace>_02.CreatingConstructors</RootNamespace>
+    <AssemblyName>02.CreatingConstructors</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
