--- a/C# OOP/Exercise - Defining Classes/05.SpeedRacing/05.SpeedRacing.csproj
+++ b/C# OOP/Exercise - Defining Classes/05.SpeedRacing/05.SpeedRacing.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EB3F6EC-DB33-4ABF-BBC8-1640F3214ADA}</ProjectGuid>
+    <ProjectGuid>{D13EAF4D-121A-49DE-91F0-0F2A01727C79}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.DefiningClasses</RootNamespace>
-    <AssemblyName>01.DefiningClasses</AssemblyName>
+    <RootNamespace>_05.SpeedRacing</RootNamespace>
+    <AssemblyName>05.SpeedRacing</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Car.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
