--- a/C# OOP/Exercise - Defining Classes/07.CarSalesman/07.CarSalesman.csproj
+++ b/C# OOP/Exercise - Defining Classes/07.CarSalesman/07.CarSalesman.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EB3F6EC-DB33-4ABF-BBC8-1640F3214ADA}</ProjectGuid>
+    <ProjectGuid>{05E63B07-B402-46F8-B364-D29DEB771C47}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.DefiningClasses</RootNamespace>
-    <AssemblyName>01.DefiningClasses</AssemblyName>
+    <RootNamespace>_07.CarSalesman</RootNamespace>
+    <AssemblyName>07.CarSalesman</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
