--- a/C# OOP/Exercise - Defining Classes/09.Google/09.Google.csproj
+++ b/C# OOP/Exercise - Defining Classes/09.Google/09.Google.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EB3F6EC-DB33-4ABF-BBC8-1640F3214ADA}</ProjectGuid>
+    <ProjectGuid>{73BE6C8E-B8C9-494A-9200-000D605FF167}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.DefiningClasses</RootNamespace>
-    <AssemblyName>01.DefiningClasses</AssemblyName>
+    <RootNamespace>_09.Google</RootNamespace>
+    <AssemblyName>09.Google</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
