--- a/C# OOP/Exercise - Defining Classes/09.Google/09.Google.csproj
+++ b/C# OOP/Exercise - Defining Classes/09.Google/09.Google.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
+    <Compile Include="Children.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="Parent.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="Pokemon.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
