--- a/C# OOP Advanced/Exercise - Interfaces and Abstraction/09.CollectionHierarchy/09.CollectionHierarchy.csproj
+++ b/C# OOP Advanced/Exercise - Interfaces and Abstraction/09.CollectionHierarchy/09.CollectionHierarchy.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E22CCCAD-7C79-4C2A-818C-0FF163F99591}</ProjectGuid>
+    <ProjectGuid>{D9FDD261-5369-4B10-A76B-ECD039121932}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_08.MilitaryElite</RootNamespace>
-    <AssemblyName>08.MilitaryElite</AssemblyName>
+    <RootNamespace>_09.CollectionHierarchy</RootNamespace>
+    <AssemblyName>09.CollectionHierarchy</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,24 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commando.cs" />
-    <Compile Include="Contracts\IMission.cs" />
-    <Compile Include="Contracts\IRepair.cs" />
-    <Compile Include="Contracts\ISpy.cs" />
-    <Compile Include="Engineer.cs" />
-    <Compile Include="Contracts\ICommando.cs" />
-    <Compile Include="Contracts\IEngineer.cs" />
-    <Compile Include="Contracts\ILeutenantGeneral.cs" />
-    <Compile Include="Contracts\IPrivate.cs" />
-    <Compile Include="Contracts\ISoldier.cs" />
-    <Compile Include="Contracts\ISpecialisedSoldier.cs" />
-    <Compile Include="LeutenantGeneral.cs" />
-    <Compile Include="Mission.cs" />
-    <Compile Include="Private.cs" />
-    <Compile Include="Repair.cs" />
-    <Compile Include="Soldier.cs" />
-    <Compile Include="SpecialisedSoldier.cs" />
-    <Compile Include="Spy.cs" />
+    <Compile Include="AddCollection.cs" />
+    <Compile Include="AddRemoveCollection.cs" />
+    <Compile Include="Collection.cs" />
+    <Compile Include="Contracts\IAddable.cs" />
+    <Compile Include="Contracts\IRemovable.cs" />
+    <Compile Include="Contracts\IMyList.cs" />
+    <Compile Include="MyList.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
