--- a/C# OOP Advanced/Exercise - Object Communication and Events/02.King’sGambit/02.King’sGambit.csproj
+++ b/C# OOP Advanced/Exercise - Object Communication and Events/02.King’sGambit/02.King’sGambit.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EBF7469B-47FA-46E8-8C89-C0C5BF17F389}</ProjectGuid>
+    <ProjectGuid>{2FF0A369-0A20-4CD5-B67F-E6F8FDB45D48}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01.EventImplementation</RootNamespace>
-    <AssemblyName>01.EventImplementation</AssemblyName>
+    <RootNamespace>_02.King_sGambit</RootNamespace>
+    <AssemblyName>02.King’sGambit</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dispather.cs" />
-    <Compile Include="Handler.cs" />
-    <Compile Include="NameChangeEventArgs.cs" />
+    <Compile Include="Footman.cs" />
+    <Compile Include="King.cs" />
+    <Compile Include="RoyalGuard.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
